# named_pipe

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO_LIST.txt  format.sh
client/: CMakeLists.txt
client/src/: main.cpp
include/: named_pipe.hpp  status.hpp  string_types.hpp
lib/: CMakeLists.txt
lib/include/: code_conv.hpp  constants.hpp  format_windows_error.hpp  named_pipe.hpp  pipe_name.hpp  status.hpp  string_types.hpp
lib/src/: code_conv.cpp  format_windows_error.cpp  named_pipe.cpp  pipe_name.cpp  status.cpp
server/: CMakeLists.txt
server/src/: main.cpp
src/: format_windows_error.cpp  named_pipe.cpp  status.cpp
